# craft

./: .commit-message-c1-a2-craft.txt  .commit-message-cycle4-phase1.txt  .gitignore  .gitmodules  404.html  AUGMENTATION-STREAM-RETROSPECTIVE.md  CRAFT-CONTRACT.md  CRAFT-DEPENDENCIES.md  CROSS-SKILL-RELEASE.md  LICENSE  PLATFORM-PROPOSAL.md  README.md  RELEASE_NOTES.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: README.md  cross-skill-smoke.yml  docs.yml  platform-ci.yml
architecture/contract/: index.html
architecture/platform-structure/: index.html
architecture/relationships/: index.html
architecture/retrospective/: index.html
assets/javascripts/: mermaid-init.js
docs/: index.md
docs/architecture/: contract.md  platform-structure.md  relationships.md  retrospective.md
docs/extending/: adding-a-skill.md  external-contributors.md
docs/operations/: dependencies.md  github-actions.md  release-runbook.md  troubleshooting.md
docs/quick-start/: first-run.md  install.md  verify.md
docs/reference/: chrome-interaction-contract.md  platform-proposal.md  release-notes.md
docs/skills/: adversarial.md  paper-writer.md  presentation-maker.md
extending/adding-a-skill/: index.html
extending/external-contributors/: index.html
operations/dependencies/: index.html
operations/github-actions/: index.html
operations/release-runbook/: index.html
operations/troubleshooting/: index.html
prototypes/cycle4-chrome/: README.md  chrome-interaction.md  chrome.py  synthetic_halt.py
quick-start/first-run/: index.html
quick-start/install/: index.html
quick-start/verify/: index.html
reference/chrome-interaction-contract/: index.html
reference/platform-proposal/: index.html
reference/release-notes/: index.html
search/: search_index.json
skills/adversarial/: index.html
skills/paper-writer/: index.html
skills/presentation-maker/: index.html
src/craft/: __init__.py  chrome.py  cli.py  decision.py  run_record.py
src/craft/telemetry/: __init__.py  egress.py  read.py
tests/: requirements-conformance.txt  test_chrome.py  test_cli.py  test_completeness_guard.py  test_conformance.py  test_decision.py  test_run_record_validator.py  test_telemetry_egress.py  test_telemetry_read.py
tests/fixtures/decision_v1/: image_approve_reject.json  throughline_single_select.json
tests/fixtures/run_record_v1/: adversarial_standalone_completed.json  paper_writer_completed.json  paper_writer_failed.json  presentation_maker_completed.json  presentation_maker_halted.json  presentation_maker_running.json
